@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+  GIRAPH-456: Log where master is on every host (nitay)
+
   GIRAPH-141: Multigraph support in Giraph (apresta)
         
   GIRAPH-452: Fix hcatalog jar (nitay)
